# rust-axum-sqlx-htmx-boilerplate

./: .env  .gitignore  Cargo.toml  LICENSE.md  README.md
.sqlx/: query-2dcbf502be6c3433a47a5f1fce9729125313bc3d74968138e4948dc2530f5b80.json  query-45de71cb7d0eb63c53326ad5fd2df24711d00aa9440d695c6ee0abc82d46516c.json
backend/: Cargo.toml
backend/src/: database.rs  endpoints.rs  main.rs  models.rs  templates.rs
migrations/: 20230831060729_init.up.sql
templates/: contact.html.jinja  contacts.html.jinja  index.html.jinja  layout.html.jinja  new_contact.html.jinja  not_found.html.jinja  task-details.html.jinja  task-list.html.jinja
