[package]
name = "backend"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
color-eyre = "0.6.2"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
