[package]
name = "backend"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
color-eyre = "0.6.2"
minijinja = { version = "1.0.7", features = ["builtins", "loader"] }
minijinja-autoreload = "1.0.7"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
    "time",
] }
thiserror = "1.0.48"
time = { version = "0.3.28", features = ["serde"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
